--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Flex & Content</title>
 </head>
 <body>
-    <a href="FlexContent.html"><h1>*Layout*</h1>Flex & Content</a>
+    <a href="FlexContent.html"><h1>*Layout*</h1>Flex & Content</a><br>
+    <a href="respo.html">Flex-grow,basis,shrink&Order</a><br>
+    <a href="parchi.html">Parrent and Child(Container&Content)</a>
 </body>
 </html>
