Flex & Parrent Child

--- a/parchi.html
+++ b/parchi.html
@@ -11,7 +11,7 @@
     <main>
         <aside><h3>Aside bar</h3>
             <ul>
-                <li><a href="">Facebook</a> </li>
+                <li><a href="">Facebook</a></li>
                 <li><a href="">google</a></li>
                 <li><a href="">twitter</a></li>
                 <li><a href="">insta</a></li>
@@ -50,7 +50,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero ipsam quas, ducimus porro dolor iusto quisquam asperiores accusantium voluptatibus repellat inventore placeat beatae, aliquid totam velit voluptatum, sed temporibus similique! Vitae saepe cupiditate atque nisi aspernatur corrupti neque dolorem qui quo, iusto provident, ipsam rerum optio earum rem ab iure! Soluta quia sit libero vitae, voluptatem similique tempore nemo voluptas iusto sunt deserunt vel ducimus commodi fugit ab doloribus illo, praesentium fuga illum dolorum ipsa vero suscipit. Blanditiis illo placeat neque similique, laudantium iste totam unde provident deserunt possimus cupiditate earum atque explicabo velit, ex natus! Amet debitis labore blanditiis.
             </div>
             <div class="img">
-                <img src="CSS/image/ui design mob.jpg" alt="">
+                <img src="CSS/image/Sania mirza.jpg" alt="">
                 <h3>Contry:India</h3>
                 <h3>Residence:Haidrabad,India</h3>
                 <h3>Born:15November</h3>
